# heroku-jvm-application-deployer

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  circle.yml  pom.xml  release.sh  run.sh
.circleci/: config.yml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  prepare-release.yml  release.yml
complete/: pom.xml
etc/: ci-setup.sh
heroku-deploy/: pom.xml
heroku-deploy-standalone/: README.md  pom.xml
heroku-deploy/src/main/resources/: heroku-deploy.properties  heroku_with_jmap.sh  heroku_with_jstack.sh
heroku-deploy/src/test/resources/: sample-war.war  sample.netrc
heroku-maven-plugin/: pom.xml
heroku-maven-plugin/src/it/build-config-test/: pom.xml  verify.groovy
heroku-maven-plugin/src/it/deploy-config-test/: pom.xml  verify.groovy
heroku-maven-plugin/src/it/external-config-test/: pom.xml  verify.groovy
integration-test/: Cargo.toml
integration-test/fixtures/jar-app/: pom.xml
integration-test/fixtures/jar-app/src/main/java/com/heroku/: App.java
integration-test/fixtures/war-app/: pom.xml
integration-test/fixtures/war-app/src/main/java/com/heroku/: HelloWorldServlet.java
integration-test/fixtures/war-app/src/main/webapp/WEB-INF/: web.xml
integration-test/src/: lib.rs
integration-test/tests/: integration_tests.rs
maven-plugin/: .project  pom.xml
platform-client/: pom.xml
src/it/deploy-config-test/: pom.xml  test.txt  verify.groovy
src/it/simple-deploy-test/: pom.xml  setup.groovy
src/it/simple-war-test/: pom.xml  verify.groovy
src/main/resources/: default-project.toml
(+246 files in other folders)
