[package]
name = "integration-test"
edition = "2021"
rust-version = "1.75"

[dependencies]
tempfile = "3.9"
fs_extra = "1.3"
ureq = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
exponential-backoff = "1.2"
libherokubuildpack = { version = "0.17", features = ["command"] }
