[package]
name = "integration-test"
edition = "2021"
rust-version = "1.75"

[lints.rust]
unreachable_pub = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
pedantic = "warn"

[dependencies]
exponential-backoff = "2"
fs_extra = "1"
libherokubuildpack = { version = "0.26", default-features = false, features = ["command"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
ureq = { version = "2", default-features = false, features = ["tls"] }
