[package]
name = "integration-test"
edition = "2024"
rust-version = "1.89"

[lints.rust]
unreachable_pub = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_panics_doc = "allow"

[dependencies]
exponential-backoff = "2"
fs_extra = "1"
libherokubuildpack = { version = "0.29", default-features = false, features = ["command"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
ureq = { version = "3", default-features = false, features = ["rustls"] }
